--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "@types/humps": "^1.1.3",
+    "ang-jsoneditor": "^1.9.1",
     "humps": "^2.0.1",
+    "jsoneditor": "^8.6.6",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
